--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,7 @@
     "axios",
     "bumpp",
     "chatgpt",
-    "chenzhaoyu",
+    "alphaviae",
     "commitlint",
     "davinci",
     "dockerhub",
