--- a/kubernetes/deploy.yaml
+++ b/kubernetes/deploy.yaml
@@ -17,7 +17,7 @@ spec:
         app: chatgpt-web
     spec:
       containers:
-        - image: chenzhaoyu94/chatgpt-web
+        - image: alphaviae94/chatgpt-web
           name: chatgpt-web
           imagePullPolicy: Always
           ports:
