--- a/service/package.json
+++ b/service/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": false,
   "description": "ChatGPT Web Service",
-  "author": "ChenZhaoYu <chenzhaoyu1994@gmail.com>",
+  "author": "alphaviae <alphaviae1994@gmail.com>",
   "keywords": [
     "chatgpt-web",
     "chatgpt",
