--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     container_name: chatgpt-web
-    image: alphaviae94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
+    image: ally94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
     ports:
       - 3002:3002
     environment:
