--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.10.8",
   "private": false,
   "description": "ChatGPT Web",
-  "author": "alphaviae <alphaviae1994@gmail.com>",
+  "author": "ally <ally1994@gmail.com>",
   "keywords": [
     "chatgpt-web",
     "chatgpt",
